@@ -232,6 +232,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #26590: Implement a safe finalizer for the _socket.socket type. It now
+  releases the GIL to close the socket.
+
 - Issue #18787: spwd.getspnam() now raises a PermissionError if the user
   doesn't have privileges.
 
